# UPI-DETECTION-USING-XGBOOST_AND_LSTM

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard  LICENSE  PROJECT_DOCUMENTATION.md  README.md  RUN_INSTRUCTIONS.md  SECURITY.md  UPGRADE_GUIDE.md  docker-compose.yml  mock_payment_app.py  pyproject.toml  requirements.txt  verify_scenarios.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
01_data/processed/: X_lstm_test.npy  X_xgb_test.npy  X_xgb_train.npy  y_test.npy  y_train.npy
01_data/raw/: upi_transactions.csv
02_models/artifacts/: feature_names.pkl  label_encoders.pkl  lstm_model.h5  metrics.json  scaler.pkl  xgb_model.pkl
03_training/: __init__.py  train.py
04_inference/: __init__.py  api.py  schemas.py  service.py
06_dashboard/: app.py
06_notebooks/: 01_Exploratory_Data_Analysis.ipynb  02_Model_Training.ipynb  03_Explainability_Analysis.ipynb
07_configs/: config.yaml
dashboard/: .gitignore  README.md  index.html  package.json
dashboard/src/: App.tsx  index.tsx
scripts/: docker-entrypoint.sh  generate_checksums.py
src/: __init__.py
src/api/: main.py  schemas.py
src/core/: config.py  security.py
src/models/: train.py
src/services/: feature_store.py  fraud_detection.py
src/utils/: logging.py  preprocessing.py
tests/: __init__.py  test_project.py
tests/integration/: __init__.py  test_api.py
tests/security/: test_authentication.py  test_cors.py  (+3 more)
utils/: __init__.py  config.py  feature_store.py  generate_data.py  logger.py  preprocessing.py  security.py
(+17 files in other folders)
