[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upi-fraud-detection"
version = "2.0.0"
description = "Hybrid AI-based real-time UPI fraud detection system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "UPI Fraud Detection Team", email = "security@upifraudshield.com"}
]
requires-python = ">=3.10"
dependencies = [
    # Core ML/AI
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "tensorflow>=2.14.0",
    "shap>=0.43.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Configuration
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",

    # Utilities
    "requests>=2.31.0",
    "joblib>=1.3.0",
    "redis>=5.0.0",

    # Dashboard
    "streamlit>=1.33.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "jupyter>=1.0.0",
]

[project.scripts]
upi-api = "api.main:main"
upi-train = "models.train:main"
upi-dashboard = "dashboard.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
